Added styles to html

--- a/pore.html
+++ b/pore.html
@@ -4,12 +4,30 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Webpage</title>
-        <link rel="stylesheet" href="receptek.css">
+        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="recept.css">
         <script src="script.js" defer></script>
-        <link rel="icon" href="foetel.png" type="image/x-icon">
+        <link rel="icon" href="Monokuma.ico" type="image/x-icon">
     </head>
     <body>
         <h1>Insert name here</h1>
+        <h2>Hozzávalók:</h2>
+        <li>asd</li>
+        <li>fgh</li>
+        <li>jkl</li>
+        <li>qwe</li>
+        <li>rty</li>
+
+        <h2>Qwerty:</h2>
+        <li>qwert</li>
+        <li>yuiop</li>
+        <li>asdfg</li>
+        <li>hjklzx</li>
+        <li>cvbnm</li>
+
+        <h2>Elkészítés:</h2>
+        <p>g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g </p>
+
         
     </body>
 </html>
