--- a/no-tches.html
+++ b/no-tches.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Webpage</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="default.css">
         <link rel="stylesheet" href="recept.css">
         <script src="script.js" defer></script>
         <link rel="icon" href="Monokuma.ico" type="image/x-icon">
