--- a/pore.html
+++ b/pore.html
@@ -12,18 +12,23 @@
     <body>
         <h1>Insert name here</h1>
         <h2>Hozzávalók:</h2>
-        <li>asd</li>
-        <li>fgh</li>
-        <li>jkl</li>
-        <li>qwe</li>
-        <li>rty</li>
+        <ul>
+            <li>asd</li>
+            <li>fgh</li>
+            <li>jkl</li>
+            <li>qwe</li>
+            <li>rty</li>
+        </ul>
+        
 
         <h2>Qwerty:</h2>
-        <li>qwert</li>
-        <li>yuiop</li>
-        <li>asdfg</li>
-        <li>hjklzx</li>
-        <li>cvbnm</li>
+        <ul><li>qwert</li>
+            <li>yuiop</li>
+            <li>asdfg</li>
+            <li>hjklzx</li>
+            <li>cvbnm</li>
+        </ul>
+        
 
         <h2>Elkészítés:</h2>
         <p>g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g g </p>
